# C-DSandA

./: CMakeLists.txt  README.md  main.c  sll.c  sll.h
Arrays/: MultiDimensionalArrays.c  MultiDimensionalArrays.h  arrays.c  arrays.h  binSearch.c  binSearch.h
BinaryTree/: bst.c  bst.h
DataStructures/LinkedLists/: README.md  sll.c  sll.h
K&R/: k&rmain.c  k&rmain.h
LinkedLists/: sll.c  sll.h
cake-array-merge/: array-merge.c  array-merge.h
cake-thief/: cake-thief.c  cake-thief.h
fPointer/: fpointer.c  fpointer.h
function-pointers/: function-pointers.c  function-pointers.h
helpers/: CMakeLists.txt  helpers.c  helpers.h
